--- a/src/template/base.html
+++ b/src/template/base.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <div style="margin: 100px;"><h5>Encabezado</h5></div>
-            {% block content %}Base{% endblock content %}
+
+            {% block content %}Base{% endblock %}
+
         <div style="margin: 100px;"><h5>Pie</h5></div>
     </body>
 </html>
