--- a/src/template/prueba.html
+++ b/src/template/prueba.html
@@ -2,7 +2,9 @@
 
     {% block content %}
 
-    <h3>URL Hijo</h3>
+    <h3>Soy el HOME</h3>
+    
+    <a href="{% url 'segunda_pantalla' %}">Ir a la seguda pagina</a>
 
-    {% endblock content %}
+    {% endblock %}
 
