--- a/src/tpfinal/template/segundo.html
+++ b/src/tpfinal/template/segundo.html
@@ -2,10 +2,7 @@
 <html>
     <body>
         {% block content %}
-    
-        <a href="{% url 'home' %}"> Volver</a>
-    
-        { % endblock content %}
-        
+    	<h3>Pagina 2</h3>
+        {% endblock content %}
     </body>
 </html> 
