blog app creada y navegacion completa

--- a/src/template/principal.html
+++ b/src/template/principal.html
@@ -3,8 +3,11 @@
     {% block content %}
 
     <h3>Soy el HOME</h3>
-    
+
     <a href="{% url 'segunda_pantalla' %}">Ir a la seguda pagina</a>
+
+    <a href="{% url 'listar_blog' %}">Ir a lista blog</a>
+
 
     {% endblock %}
 
