--- a/src/template/base.html
+++ b/src/template/base.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
 
     <title>Blog con Django</title>
+    <link href="{% static 'css/post.css' %}" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
