--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -3,35 +3,64 @@
 
 {% block content %}
 
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('{{ STATIC_URL }}img/post-bg.jpg')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="post-heading">
-            <h1>{{post.titulo}}</h1>
-            <h2 class="subheading">{{post.subtitulo}}</h2>
-            <span class="meta">Posted by
-              <a href="#">{{post.autor}}</a>
-              on {{post.fecha_publicacion}}</span>
+<!-- Page Header -->
+<header class="masthead" style="background-image: url('{{ STATIC_URL }}img/post-bg.jpg')">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <div class="post-heading">
+          <h1>{{post.titulo}}</h1>
+          <h2 class="subheading">{{post.subtitulo}}</h2>
+          <span class="meta">Posted by
+            <a href="#">{{post.autor}}</a>
+            on {{post.fecha_publicacion}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
+
+<!-- Post Content -->
+<article>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        {{post.contenido}}
+      </div>
+    </div>
+  </div>
+</article>
+
+{% if comentarios %}
+<hr>
+<h6>Comentarios </h6>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container-fluid">
+
+    <div class="accordion" id="accordionExample">
+      {% for comentario in comentarios %}
+      <div class="card">
+        <div class="card-header" id="headingOne">
+          <h2 class="mb-0">
+            <button class="btn btn-block text-left" type="button" data-toggle="collapse"
+              data-target="#collapse{{comentario.id}}" aria-expanded="true" aria-controls="collapse{{comentario.id}}">
+              Usuario{{comentario.id}}
+            </button>
+          </h2>
+        </div>
+
+        <div id="collapse{{comentario.id}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+          <div class="card-body">
+            <p>{{comentario.contenido}}</p>
+            <br>
+            {{comentario.fecha_publicacion}}
           </div>
         </div>
       </div>
+      {% endfor %}
     </div>
-  </header>
-
-  <!-- Post Content -->
-  <article>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          {{post.contenido}}
-        </div>
-      </div>
-    </div>
-  </article>
-
-  <hr>
-
-  {% endblock %}
+  </div>
+</div>
+{% endif %}
+{% endblock %}
