funciona comentario-estilo mejorado

--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -12,9 +12,9 @@
         <div class="post-heading">
           <h1>{{post.titulo}}</h1>
           <h2 class="subheading">{{post.subtitulo}}</h2>
-          <span class="meta">Posted by
+          <span class="meta">Posteado por
             <a href="#">{{post.autor}}</a>
-            on {{post.fecha_publicacion}}</span>
+             {{post.fecha_publicacion}}</span>
         </div>
       </div>
     </div>
@@ -23,7 +23,7 @@
 
 <!-- Post Content -->
 <article>
-  <div class="container">
+  <div class="container ">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         {{post.contenido}}
@@ -43,7 +43,7 @@
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
-            <button class="btn btn-block text-left" type="button" data-toggle="collapse"
+            <button id="" class="btn btn-block text-left" type="button" data-toggle="collapse"
               data-target="#collapse{{comentario.id}}" aria-expanded="true" aria-controls="collapse{{comentario.id}}">
               Usuario{{comentario.id}}
             </button>
@@ -52,7 +52,7 @@
 
         <div id="collapse{{comentario.id}}" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
           <div class="card-body">
-            <p>{{comentario.contenido}}</p>
+            <p style="margin-top: 15px; margin-bottom: 15px; font-size:15px;">{{comentario.contenido}}</p>
             <br>
             {{comentario.fecha_publicacion}}
           </div>
