--- a/src/static/css/post.css
+++ b/src/static/css/post.css
@@ -1,3 +1,12 @@
-.jumbotron-sin-padding {
-    padding: 0px !important;
+.btn:focus{
+    box-shadow: none !important; 
+
 }
+#headingOne{
+    padding-top: 4px;
+    padding-bottom: 4px;
+    background-color: rgba(255, 255, 255, 0.945);
+}
+/* .post-subtitle h5{
+  
+} */
