furmulario agregado - aun falta vincular al boton

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -57,7 +57,8 @@
     </nav>
 
     {% block content %}Base{% endblock %}
-
+    {% block main%}{% endblock %}
+    <br>
     <hr>
     <!-- Footer -->
     <footer>
