--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -38,8 +38,17 @@
           <a href="#">Usuario{{post.id}}</a>
           - {{post.fecha_publicacion}}
         </p>
+      </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endblock %}
 
-        {% endfor %}
+{% block main %}
+<br>
+<div class='container text-center ' >
+  <a class="btn btn-outline-info" href="#" role="button">Crear Posts</a>
 
-
-        {% endblock %}
+</div>
+{% endblock %}
