formulario fue agregado

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">Inicio</a>
+                        <a class="nav-link" href="{% url 'alta_post' %}">Crear Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'about' %}">Nosotros</a>
@@ -57,7 +57,7 @@
     </nav>
 
     {% block content %}Base{% endblock %}
-    {% block main%}{% endblock %}
+
     <br>
     <hr>
     <!-- Footer -->
