--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -43,12 +43,11 @@
     </div>
   </div>
 </div>
-{% endblock %}
 
-{% block main %}
+
 <br>
 <div class='container text-center ' >
-  <a class="btn btn-outline-info" href="#" role="button">Crear Posts</a>
+  <a class="btn btn-outline-info" href="{% url 'alta_post' %}" role="button">Crear Posts</a>
 
 </div>
 {% endblock %}
