--- a/src/template/blog/altaPost.html
+++ b/src/template/blog/altaPost.html
@@ -16,24 +16,23 @@
         </div>
     </div>
 </header>
-{% endblock %}
-{% block main%}
+
 <br>
 <div class=" jumbotron jumbotron-fluid">
-<div class="container">
-{% crispy form%}
-<form method="POST" enctype="multipart/form-data" class="form-inline justify-content-center"> {% csrf_token %}
-    <!-- <div class="container" style="width: 750px">
+    <div class="container">
+        {% crispy form%}
+        <form action=" " method="POST" enctype="multipart/form-data" class="form-inline justify-content-center"> {% csrf_token %}
+            <!-- <div class="container" style="width: 750px">
         <div class="row">
             <div class="col-lg-12"> -->
-                <!-- {{form.as_p}} -->
-                <input type="submit" name="guardar" id="" value="Guardar" class="btn btn-outline-info">
+            <!-- {{form.as_p}} -->
+            <input type="submit" name="guardar" id="" value="Guardar" class="btn btn-outline-info">
             <!-- </div>
         </div>
     </div> -->
 
 
-</form>
-</div>
+        </form>
+    </div>
 </div>
 {% endblock %}
