--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -14,7 +14,8 @@
           <h2 class="subheading">{{post.subtitulo}}</h2>
           <span class="meta">Posteado por
             <a href="#">{{post.autor}}</a>
-            {{post.fecha_publicacion}}</span>
+            {{post.fecha_publicacion}}
+          </span>
         </div>
       </div>
     </div>
