--- a/src/template/blog/altaPost.html
+++ b/src/template/blog/altaPost.html
@@ -20,19 +20,20 @@
 <br>
 <div class=" jumbotron jumbotron-fluid">
     <div class="container">
-        {% crispy form%}
-        <form action=" " method="POST" enctype="multipart/form-data" class="form-inline justify-content-center"> {% csrf_token %}
+        <!--{% crispy form %}-->
+        <form method="POST"> 
+            {% csrf_token %}
             <!-- <div class="container" style="width: 750px">
         <div class="row">
             <div class="col-lg-12"> -->
-            <!-- {{form.as_p}} -->
+            {{form|crispy}}
             <input type="submit" name="guardar" id="" value="Guardar" class="btn btn-outline-info">
             <!-- </div>
         </div>
     </div> -->
 
 
-        </form>
+       </form>
     </div>
 </div>
 {% endblock %}
