--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
 
 <!-- Page Header -->
@@ -51,15 +51,21 @@
           </h2>
         </div>
 
-        <div class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+        <!--div class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample"-->
           <div class="card-body">
-            <form action="">
-              <div class="form-group">
-                <!-- <label for="exampleFormControlTextarea1">Example textarea</label> -->
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-              </div>
-              <button type="button " class="btn btn-outline-info">Guardar</button>
-            </form>
+            <form method="POST"> 
+            {% csrf_token %}
+            <!-- <div class="container" style="width: 750px">
+        <div class="row">
+            <div class="col-lg-12"> -->
+            {{form|crispy}}
+            <input type="submit" name="guardar" id="" value="Guardar" class="btn btn-outline-info">
+            <!-- </div>
+        </div>
+    </div> -->
+
+
+       </form>
           </div>
         </div>
       </div>
