--- a/src/template/blog/altaPost.html
+++ b/src/template/blog/altaPost.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
+{% load static %}
+
 {% block content %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="{% static 'js/confirmacion.js'%}"></script>
+
 <!-- Page Header -->
 <header class="masthead" style="background-image: url(/static/img/contact-bg.jpg)">
     <div class="overlay"></div>
@@ -24,12 +29,13 @@
         <form method="POST"> 
             {% csrf_token %}
             <!-- <div class="container" style="width: 750px">
-        <div class="row">
-            <div class="col-lg-12"> -->
+        <div class="row">-->
             {{form|crispy}}
-            <input type="submit" name="guardar" id="" value="Guardar" class="btn btn-outline-info">
-            <!-- </div>
-        </div>
+            <div class="container" > 
+            <button type="submit" class="btn btn-outline-info"> Guardar</button>
+            <!-- <input type="submit" name="guardar" id="" value="Guardar" class="btn btn-outline-info"  onclick="confirmarEliminacion({{post.id}})" > -->
+           </div>
+         <!-- </div>
     </div> -->
 
 
