--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -2,6 +2,9 @@
 {% load static %}
 
 {% block content %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="{% static 'js/confirmacion.js'%}"></script>
+
 
 <!-- Page Header -->
 <header class="masthead" style="background-image: url(/static/img/home-bg.jpg)">
@@ -19,27 +22,47 @@
 </header>
 
 <!-- Main Content -->
-<div class="container">
-  <div class="row">
+<div class="container card">
+  <div class="row card-body">
     <div class="col-lg-8 col-md-10 mx-auto">
 
       {% for post in object_list %}
-      <div class="post-preview">
+      <div class="post-preview ">
 
         <h2 class="post-title">
-          {{post.titulo}}
+          <a href="{% url 'posts' post.pk %}">{{post.titulo}}</a>
+
         </h2>
-        <p class="post-subtitle text-truncate">
+        <p class="post-subtitle text-truncate" style="margin-bottom: 0px;">
           {{post.contenido}}
         </p>
-        <strong><a href="{% url 'posts' post.pk %}" style="font-size: 15px;">Ver más</a></strong>
+        <strong><a href="{% url 'posts' post.pk %}" style="font-size: 15px; ">Ver más</a></strong>
         </a>
-        <p class="post-meta">Postedado por
-          <a href="#">Usuario{{post.id}}</a>
-          - {{post.fecha_publicacion}}
-          <a href="{% url 'editar' post.id %}">editar</a>
-          <a href="{% url 'eliminar' post.id %}">eliminar</a>
-        </p>
+        <div class="row post-meta">
+          <div class="col-md-8">
+            <p>Postedado por
+              <a href="#" on>Usuario{{post.id}}</a>
+              - {{post.fecha_publicacion}}
+
+            </p>
+          </div>
+          <div class="col-md-4">
+            <p class="float-right">
+              <a href="{% url 'editar' post.id %}"
+                style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                role="button" class="btn btn-outline-info" type="image/x-icon"> <img src="{% static 'img/pencil.svg' %}"
+                  style="width:17px;height:17px" alt='' /></a>
+
+              <a href="#" onclick="confirmarEliminacion({{post.id}})"
+                style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                role="button" class="btn btn-outline-danger" type="image/x-icon"> <img
+                  src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
+            </p>
+          </div>
+
+        </div>
+        <hr>
+
       </div>
       {% endfor %}
     </div>
@@ -48,7 +71,7 @@
 
 
 <br>
-<div class='container text-center ' >
+<div class='container text-center '>
   <a class="btn btn-outline-info" href="{% url 'alta_post' %}" role="button">Crear Posts</a>
 
 </div>
