--- a/src/template/base.html
+++ b/src/template/base.html
@@ -49,7 +49,14 @@
                         <a class="nav-link" href="{% url 'about' %}">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Login</a>
+
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'logout' %}">CERRAR SESION</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'login' %}">INICIAR SESION</a>
+                        <a class="nav-link" href="{% url 'crear_usuario' %}">CREAR USUARIO</a>
+                        {% endif %}
+
                     </li>
                 </ul>
             </div>
