--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -52,6 +52,7 @@
           </h2>
         </div>
 
+        {% if user.is_authenticated %}
         <!--div class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample"-->
           <div class="card-body">
             <form method="POST"> 
@@ -64,7 +65,7 @@
             <!-- </div>
         </div>
     </div> -->
-
+        {% endif %}
 
        </form>
           </div>
