--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -41,7 +41,7 @@
         <div class="row post-meta">
           <div class="col-md-8">
             <p>Postedado por
-              <a href="#" on>{{user.username}}</a>
+              <a href="#" on>{{post.id_user}}</a>
               - {{post.fecha_publicacion}}
 
             </p>
