--- a/src/template/usuario/altaUsuario.html
+++ b/src/template/usuario/altaUsuario.html
@@ -1,3 +1,7 @@
+{% extends 'base.html' %}
+{% load static %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,3 +24,4 @@
 
 </body>
 </html>
+{% block end%}
