mejorando registro usuario

--- a/src/template/base.html
+++ b/src/template/base.html
@@ -54,7 +54,7 @@
                         <a class="nav-link" href="{% url 'logout' %}">CERRAR SESION</a>
                         {% else %}
                         <a class="nav-link" href="{% url 'login' %}">INICIAR SESION</a>
-                        <a class="nav-link" href="{% url 'crear_usuario' %}">CREAR USUARIO</a>
+                        <!-- <a class="nav-link" href="{% url 'crear_usuario' %}">CREAR USUARIO</a> -->
                         {% endif %}
 
                     </li>
