--- a/src/template/blog/home.html
+++ b/src/template/blog/home.html
@@ -82,8 +82,8 @@
 
 
 <br>
-<div class='container text-center '>
+<!-- <div class='container text-center '>
   <a class="btn btn-outline-info" href="{% url 'alta_post' %}" role="button">Crear Posts</a>
 
-</div>
+</div> -->
 {% endblock %}
