--- a/src/template/usuario/login.html
+++ b/src/template/usuario/login.html
@@ -11,7 +11,7 @@
         <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
                 <div class="site-heading">
-                    <h1>Iniciar sesion</h1>
+                    <h1>Bienvenidos</h1>
                     <span class="subheading">Blog de Noticias y Actualidad </span>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 <div class="row justify-content-center">
                     <div class="col-md-8">
                         <div class="card">
-                            <div class="card-header">Registrarse</div>
+                            <div class="card-header">Iniciar sesión</div>
                             <div class="card-body">
                                 <form action="" method="POST">{%csrf_token%}
                                     {{form.errors}}
