comentarios por autor funcionando

--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -65,9 +65,24 @@
             <!-- </div>
         </div>
     </div> -->
-        {% endif %}
+        
 
        </form>
+
+        <script type="text/javascript">
+           
+        var name = "{{user.id}}"
+        document.getElementById("identificador").value
+            = name;
+
+
+       </script>
+
+{% endif %}
+
+
+
+
           </div>
         </div>
       </div>
