ahora muestra comentarios por usuario

--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -99,7 +99,7 @@
           <h2 class="mb-0">
             <button id="" class="btn btn-block text-left " type="button" data-toggle="collapse"
               data-target="#collapse{{comentario.id}}" aria-expanded="true" aria-controls="collapse{{comentario.id}}">
-              Usuario{{comentario.id}}
+              {{comentario.autor}}
             </button>
           </h2>
         </div>
