--- a/src/template/blog/altaPost.html
+++ b/src/template/blog/altaPost.html
@@ -28,7 +28,7 @@
 <div class=" jumbotron jumbotron-fluid">
     <div class="container">
         <!--{% crispy form %}-->
-        <form method="POST"> 
+        <form method="POST" enctype="multipart/form-data"> 
             {% csrf_token %}
             <!-- <div class="container" style="width: 750px">
         <div class="row">-->
