--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -29,6 +29,8 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         {{post.contenido}}
+        <br>
+        <img src="{{post.imagen.url}}">
       </div>
     </div>
   </div>
@@ -55,7 +57,7 @@
         {% if user.is_authenticated %}
         <!--div class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample"-->
           <div class="card-body">
-            <form method="POST"> 
+            <form method="POST" enctype="multipart/form-data"> 
             {% csrf_token %}
             <!-- <div class="container" style="width: 750px">
         <div class="row">
