--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -30,7 +30,7 @@
       <div class="col-lg-8 col-md-10 mx-auto">
         {{post.contenido}}
         <br>
-        <img src="{{post.imagen.url}}">
+        <img src="{{post.imagen.url}}" style="width: 300px; heigth:100px">
       </div>
     </div>
   </div>
