--- a/src/template/usuario/base_usu.html
+++ b/src/template/usuario/base_usu.html
@@ -63,11 +63,10 @@
         </div>
     </nav>
 
-    {% block content %}Base{% endblock %}
+    {% block content %}base{% endblock %}
 
     <br>
     <hr>
-
     <!-- Footer -->
     <footer>
         <div class="container">
