--- a/src/template/about.html
+++ b/src/template/about.html
@@ -11,8 +11,8 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>About Us</h1>
-            <span class="subheading">This is what we do.</span>
+            <h1>Nosotros</h1>
+            <span class="subheading">Equipo de desarrolo web del Informatorio.</span>
           </div>
         </div>
       </div>
