Comentarios un poco corregidos

--- a/src/template/blog/post.html
+++ b/src/template/blog/post.html
@@ -3,6 +3,9 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
+<!--Estos scripts son para los botones, ni idea como editarlos-->
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="{% static 'js/confirmacion.js'%}"></script>
 
 <!-- Page Header -->
 <header class="masthead" style="background-image: url('{{ STATIC_URL }}img/post-bg.jpg')">
@@ -78,7 +81,7 @@
 
        </script>
 
-{% endif %}
+        {% endif %}
 
 
 
@@ -109,7 +112,29 @@
           <div class="card-body">
             <p style="margin-top: 15px; margin-bottom: 15px; font-size:15px;">{{comentario.contenido}}</p>
             <br>
-            {{comentario.fecha_publicacion}}
+            <p style="margin-top: 15px; margin-bottom: 15px; font-size:15px;">Publicado: {{comentario.fecha_creacion}}</p>
+
+            <!--Aca van los botones de borrar y editar, aunque no estoy seguro de como funcionan, al inicio añadi unos scripts que estaban en home, pero igual no funciona bien,
+            no se como funciona esto-->
+            {% if user.is_authenticated %}
+              {% if user.id == comentario.autor_id %}
+                <div>
+                  <p class="float-right">
+                    <a href="{% url 'editar' post.id %}"
+                     style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                     role="button" class="btn btn-outline-info" type="image/x-icon"> <img src="{% static 'img/pencil.svg' %}"
+                      style="width:17px;height:17px" alt='' /></a>
+  
+                   <a href="#" onclick="confirmarEliminacion({{comentario.id}})"
+                     style="color:black;padding-bottom: 10px;padding-left: 15px;padding-right: 15px;padding-top: 10px;"
+                      role="button" class="btn btn-outline-danger" type="image/x-icon"> <img
+                       src="{% static 'img/trash.svg' %}" style="width:17px;height:17px" alt='' /></a>
+                 </p>
+               </div>
+              {% endif %}
+            {% endif %}
+            <!------------------------------------------------------------------------------------>
+
           </div>
         </div>
       </div>
